Fix dark mode related issue in about page

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -8,7 +8,7 @@ p {
 }
 
 .license-avatar {
-    background: #efefef;
+    background: #303030;
     display: flex;
     align-items: center;
     justify-content: center;
